--- a/css/style.css
+++ b/css/style.css
@@ -5,26 +5,50 @@ body {
     margin: 0;
     padding: 0;
   }
-  header {
+  
+  /* header {
     background-color: Navy;
     padding: 20px;
     text-align: center;
-  }
+  } */
+  
   main {
     padding: 20px;
   }
+
+
+  .logo {
+    width: 23%;
+    height: 100px;
+    padding: 1%;
+    align-items: center;
+}
+
+.hero {
+    background-image: url("https://github.com/jeremybacker/UX_UI_HW_18/blob/main/assets/images/ABOUT%20ME.png?raw=true");
+    background-size: 100%;
+    background-repeat: no-repeat;
+
+}
+
+h1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
   table {
     border-collapse: collapse;
     width: 100%;
   }
+  
   th, td {
     border: 1px solid gray;
     padding: 8px;
     text-align: left;
   }
+  
   th {
     background-color: lightgray;
   }
+  
   footer {
     background-color: lightgray;
     padding: 20px;
