--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .hero {
-    background-image: url("https://github.com/jeremybacker/UX_UI_HW_18/blob/main/assets/images/ABOUT%20ME.png?raw=true");
+    background-image: url("https://github.com/jeremybacker/SkiHood/blob/main/assets/HeroImage.png");
     background-size: 100%;
     background-repeat: no-repeat;
 
